--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,14 +1,23 @@
 # Use a Node.js base image
 FROM node:18
 
+# Set the working directory
 WORKDIR /usr/src/app
 
+# Copy the package.json and package-lock.json files
 COPY package*.json ./
-COPY app.js ./
 
 # Install dependencies
 RUN npm install
 
+# Copy the rest of the application code
+COPY . .
+
+# Copy the images directory to the container
+COPY images /usr/src/app/images
+
+# Expose the application port
 EXPOSE 3000
 
+# Run the application
 CMD ["node", "app.js"]
