--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,23 +1,21 @@
 # Use a Node.js base image
-FROM node:18
+FROM node:22
 
-# Set the working directory
+# Set the working directory inside the container
 WORKDIR /usr/src/app
 
-# Copy the package.json and package-lock.json files
+# Copy package files and install dependencies
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install
 
-# Copy the rest of the application code
-COPY . .
-
-# Copy the images directory to the container
+# Copy the source files to the container
+COPY src /usr/src/app/src
 COPY images /usr/src/app/images
+COPY files /usr/src/app/files
+COPY ./public /usr/src/app/public
 
 # Expose the application port
 EXPOSE 3000
 
-# Run the application
-CMD ["node", "app.js"]
+# Start the application from the src directory
+CMD ["node", "src/app.js"]
