--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-basic-auth": "^1.2.1",
     "express-rate-limit": "^7.5.0",
     "file-type": "^19.6.0",
     "multer": "^1.4.5-lts.1",
