--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Pelle Ignatius",
   "license": "ISC",
   "dependencies": {
+    "braces": "^3.0.3",
     "cors": "^2.8.5",
+    "cross-spawn": "^7.0.5",
     "express": "^4.21.2",
     "express-basic-auth": "^1.2.1",
     "express-rate-limit": "^7.5.0",
